--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,12 @@
 {
   "Язык": "Русский",
   "Главная страница": "Главная страница",
-  "О проете": "О проете"
+  "О проете": "О проете",
+  "Произошла ошибка перезагрузите страницу": "Произошла ошибка перезагрузите страницу",
+  "Обновить страницу": "Обновить страницу",
+  "Page not found": "Page not found",
+  "Страница не найдена": "Страница не найдена",
+  "Main Page": "Main Page",
+  "About": "About",
+  "Toggle": "Toggle"
 }
