--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
   "Страница не найдена": "Страница не найдена",
   "Main Page": "Main Page",
   "About": "About",
-  "Toggle": "Toggle"
+  "Toggle": "Toggle",
+  "Основная страница сайта": "Основная страница сайта"
 }
